--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "chart.js": "^4.5.1",
+    "i18next": "^25.7.3",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
